docs/semantic-ontology/linkml/tests/invalid/requirement-no-fields.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-req-no-fields",
    "@type": "dcs:ContractTemplate",
    "dcs:metadata": {
        "@id": "did:web:localhost:template:test-req-no-fields#metadata",
        "@type": "dcs:TemplateMetadata",
        "dcs:title": "Test"
    },
    "dcs:policies": [
        { "@id": "did:web:localhost:template:test-req-no-fields#policy-1" }
    ],
    "dcs:contractData": [
        {
            "@id": "did:web:localhost:template:test-req-no-fields#req-1",
            "@type": "dcs:DataRequirement",
            "dcs:conditionId": "abc-123",
            "dcs:name": "Empty requirement"
        }
    ]
}
